--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.7.2",
+    "mongoose": "^7.4.0",
     "mongoose-unique-validator": "^4.0.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.3.3",
     "eslint": "^8.27.0",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
